fixing content alignment

--- a/404-v1/style.css
+++ b/404-v1/style.css
@@ -12,8 +12,9 @@ body {
   width: 100vw;
   height: 100vh;
   display: flex;
+  padding: 2rem;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
 .not-found {
   display: flex;
@@ -22,7 +23,7 @@ body {
   text-align: center;
   color: white;
   gap: 0.4rem;
-  margin: 0 5%;
+  margin: 10% 5%;
   max-width: 600px;
 }
 .not-found h1 {
